--- a/public/assets/css/newpage.css
+++ b/public/assets/css/newpage.css
@@ -1,15 +1,26 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-.NewPage-sec2{
-    margin-top: 120px;
+
+.NewPage-sec2 {
+    margin-top: 20px;
 }
-.NewPage-sec3{
-    margin-top: 120px;
+
+.NewPage-sec3 {
+    margin-top: 100px;
 }
-.row1-header{
+
+.row1-header {
     font-size: 30px;
     font-weight: bold;
     text-align: center;
+}
+
+.NewPage-sec2>p {
+    font-size: 35px;
+    font-weight: bold;
+    color: rgb(1, 29, 29);
+    text-align: center;
+    padding: 20px;
 }
