--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -249,7 +249,7 @@
         text-decoration: none;
         display: flex;
         flex-direction: column;
-        color: #b1b1b1;
+        color: black;
         font-size: 15px;
         font-weight: lighter;
     }
@@ -649,4 +649,8 @@
     .OSconcern-item>img {
         width: 60%;
         margin: 20%;
+    }
+    
+    .pagination {
+        justify-content: center!important;
     }
